# cursor-ace-orchestrator

./: .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT.md  FINAL_ANALYSIS.md  Makefile  PRD-01 - Cursor-ace-orchestrator-prd.md  PRD-02 - Cursor ACE Orchestrator — Extension v0.2.md  README.md  SPECS.md  WORKFLOW.md  ace.py  ace.spec  analyze_commits.py  changelog.md  commit_evaluator.py  commit_value_report.md  comprehensive_value_report.md  fix_node.py  improvement_report.md  migrate_plan.py  milestone_value_report.md  plan.md  pyproject.toml  ralph.yaml  ralph_loop.py  ralph_state_history.json  ralph_stats.json  reflection.py  requirements.txt  roadmap.md  rolf.yaml  rolf_loop.py  test_ace.py  test_api.py  test_gemini_3_flash_preview.py  (+6 more)
.ace/: agents.yaml  config.yaml  ownership.yaml  planner_memory.jsonl  profiling.jsonl  sqe_memory.jsonl
.ace-local/: extension-manifest.json
.ralph/: planner_memory.jsonl
.rolf/: planner_memory.jsonl
ace_api/: main.py
cursor_ace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ralph_docs/: generator.py
rolf_docs/: generator.py
sqe/: __init__.py  sqe_loop.py
tests/: test_ace_core_features.py  test_ace_core_missing.py  test_ace_service.py  test_ace_service_core.py  test_ace_service_prd01.py  test_ace_service_rbac.py  test_ace_service_tdd.py  test_ace_service_tdd_new.py  test_ace_service_unit.py  test_aceservice_comprehensive.py  test_aceservice_extended.py  test_aceservice_final.py  test_aceservice_tdd.py  test_aceservice_unit.py  (+16 more)
(+1971 files in other folders)
