[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-ace"
version = "0.1.0"
description = "Cursor ACE Orchestrator - Long-term memory and ownership for coding agents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "rich",
    "requests",
    "ruamel.yaml",
    "anthropic",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[project.scripts]
ace = "ace:app"
rolf = "rolf_loop:main"
sqe = "sqe.sqe_loop:main"

[tool.setuptools]
py-modules = ["ace", "rolf_loop", "reflection"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ace_lib*", "sqe*"]
